# aki-image-view-gtk

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  build.rs
help/C/: index.page
src/: gui0.rs  main.rs  run.rs
src/conf/: cmd.help.rs.txt  cmd.match.rs.txt  conf_file.rs  mod.rs  parse.rs
src/gui/: abdia.rs  acti.rs  dia.rs  fcdia.rs  fich.rs  guii.rs  image_area.rs  mod.rs  operation.rs  render_thr.rs  zoom.rs
src/gui/mwin/: act.rs  acti.rs  image_area.rs  mod.rs  operation.rs  render_thr.rs  zoom.rs
src/util/: err.rs  mod.rs  opt_uc_x_param.rs
ui/: Abdia.glade  Dialog.glade  Fcdia.glade  ImVm.glade  ImVm.glade~  Menu.glade  Mwin.glade
xtask/: Cargo.toml
xtask/src/: aki-image-view-gtk-cmd.txt  gen_src_cmd.rs
